full with extra

--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
 </head>
 <body>
 <h1>Inserisci i tuoi dati</h1>
-
+<div class="container">
+    <div id="timer">
+        <p></p>
+    </div>
+</div>
 <div id="display">
 </div>
 <form id="form">
-  <input type="text" id="name" placeholder="Inserisci il tuo nome">
-  <button type="button" id="add">Inserisci</button>
-  <button type="button" id="remove">Elimina</button>
+    <input type="text" id="name" placeholder="Inserisci il tuo nome">
+    <button type="button" id="add">Inserisci</button>
+    <button type="button" id="remove">Elimina</button>
 </form>
 <script src="script.js"></script>
 </body>
